changed the size of the about-us cards, fixed the hero section button on smaller resolutions and map in contact section

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  scroll-padding-top: 80px;
 }
 
 body {
@@ -55,11 +56,16 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 10vh;
+  padding: 0.4em;
   color: #FAF3E3;
   font-size: 2.3rem;
   background-color: #13120f;
   z-index: 1000;
+}
+
+.mobile-nav a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .mobile-nav__logo {
@@ -126,7 +132,7 @@ body {
 }
 
 .big-nav__logo {
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .big-nav a {
@@ -170,10 +176,10 @@ body {
   position: relative;
   text-decoration: none;
   color: inherit;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 .big-nav__links .nav-options a::after {
@@ -186,10 +192,10 @@ body {
   background-color: #FF9F29;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   -webkit-transform-origin: right;
           transform-origin: right;
 }
@@ -251,7 +257,7 @@ body {
 }
 
 .hero__text h1 {
-  font-size: 2.6rem;
+  font-size: 2.7rem;
   margin-bottom: 1em;
 }
 
@@ -262,11 +268,11 @@ body {
 
 .hero__text button {
   position: absolute;
-  bottom: 10%;
+  bottom: 12%;
   border: none;
-  padding: 1em 2em;
+  padding: 0.7em 2em;
   border-radius: 8px;
-  font-size: 1.3rem;
+  font-size: 1.7rem;
   font-weight: bold;
   background-color: #FF9F29;
   text-transform: uppercase;
@@ -317,14 +323,14 @@ body {
 
 .hero .hero-text-big__headline h1 {
   font-size: 6rem;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .hero .hero-text-big__headline p {
   -ms-flex-item-align: start;
       align-self: flex-start;
-  font-size: 3.5rem;
-  font-weight: 300;
+  font-size: 2.8rem;
+  color: #dadada;
 }
 
 .hero .hero-text-big__button {
@@ -437,13 +443,13 @@ body {
 .about-us__card .card-text button {
   border: none;
   width: 100%;
-  padding: .8em;
+  padding: 0.8em;
   border-radius: 8px;
   font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
-  -webkit-transition: background-color .3s, color .3s;
-  transition: background-color .3s, color .3s;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .about-us__card .card-text button:hover {
@@ -459,6 +465,38 @@ body {
 
 .bestsellers__carousel-area {
   margin-bottom: 6em;
+}
+
+.bestsellers .slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  margin-top: 3em;
+  padding: 1rem 0;
+  list-style-type: none;
+}
+
+.bestsellers .slick-dots li {
+  margin: 0 0.5rem;
+}
+
+.bestsellers .slick-dots button {
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  padding: 0;
+  border: none;
+  border-radius: 100%;
+  background-color: #FAF3E3;
+  text-indent: -9999px;
+}
+
+.bestsellers .slick-dots li.slick-active button {
+  background-color: #FF9F29;
 }
 
 .bestsellers__carousel-card {
@@ -494,8 +532,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 1.7rem;
+  font-size: 1.65rem;
   padding: 0.4em;
+  min-height: 65px;
   text-align: center;
   cursor: pointer;
 }
@@ -505,13 +544,13 @@ body {
   color: #FAF3E3;
   border-top: 2px solid #161515;
   overflow: hidden;
-  padding: .2em;
+  padding: 0.2em;
 }
 
 .bestsellers__card-price {
   width: 50%;
   height: 100%;
-  padding: .2em;
+  padding: 0.2em;
   font-size: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -572,7 +611,7 @@ body {
 }
 
 .contact__information p {
-  padding: .6em;
+  padding: 0.6em;
 }
 
 .contact__information span {
@@ -633,10 +672,10 @@ body {
     width: 40%;
     height: 400px;
     margin: 2.5em;
-    -webkit-transition: -webkit-transform .1s;
-    transition: -webkit-transform .1s;
-    transition: transform .1s;
-    transition: transform .1s, -webkit-transform .1s;
+    -webkit-transition: -webkit-transform 0.1s;
+    transition: -webkit-transform 0.1s;
+    transition: transform 0.1s;
+    transition: transform 0.1s, -webkit-transform 0.1s;
   }
   .about-us__card:hover {
     -webkit-transform: translateY(-10px);
@@ -650,7 +689,7 @@ body {
     font-size: 2.5rem;
   }
   .about-us__card .card-text button {
-    padding: .8em 1.2em;
+    padding: 0.8em 1.2em;
     font-size: 1.8rem;
   }
   .contact__information {
@@ -669,10 +708,10 @@ body {
     padding: 1.4em;
   }
   .hero__text h1 {
-    font-size: 5.5rem;
+    font-size: 4.5rem;
   }
   .hero__text p {
-    font-size: 3.3rem;
+    font-size: 3rem;
   }
   .hero__text button {
     font-size: 2.2rem;
@@ -685,12 +724,12 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 31%;
-    height: 500px;
-    -webkit-transition: -webkit-transform .2s;
-    transition: -webkit-transform .2s;
-    transition: transform .2s;
-    transition: transform .2s, -webkit-transform .2s;
+    width: 30%;
+    height: 450px;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    transition: transform 0.2s, -webkit-transform 0.2s;
   }
   .about-us__card:hover {
     -webkit-transform: translateY(-10px);
@@ -698,18 +737,18 @@ body {
   }
   .about-us__card .card-text {
     max-width: 80%;
-    font-size: 2.3rem;
+    font-size: 2.1rem;
   }
   .about-us__card .card-text h4 {
-    font-size: 3rem;
+    font-size: 2.7rem;
   }
   .about-us__card .card-text button {
-    padding: .8em 1.2em;
-    font-size: 2rem;
+    padding: 0.8em 1.2em;
+    font-size: 1.8rem;
   }
   .bestsellers__carousel-title {
     font-size: 2rem;
-    padding: .6em;
+    padding: 0.6em;
   }
   .bestsellers__card-price {
     font-size: 2.3rem;
